@@ -15,3 +15,4 @@ const val ICON_FA_CHEVRON_RIGHT: String = "\uf054"
 const val ICON_FA_TIMES: String = "\uf00d"
 const val ICON_FA_UNDO_ALT: String = "\uf2ea"
 const val ICON_FA_QUESTION_CIRCLE = "\uf059"
+const val ICON_FA_COG = "\uf013"
