@@ -1,3 +1,6 @@
+Tweaks:
+ * Added a small "cog" button to the objects window. Opens up a configuration popup.
+
 --------------------------------------
  v1.6.0 (2020-06-27)
 --------------------------------------
